<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.DailyMealFragment"
        android:label="@string/platos_del_d_a"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.FavouriteFragment"
        android:label="Novedades"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.MyCartFragment"
        android:label="@string/mi_carrito"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_my_pedido"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.PedidoFragment"
        android:label="@string/mis_pedidos"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.equipo1.DeliciasUrbanas.ui.fragments.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_my_about"
        android:name="com.equipo1.DeliciasUrbanas.ui.about.AboutFragment"
        android:label="@string/nosotros"
        tools:layout="@layout/fragment_about" />
</navigation>