<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegistrationActivity">

    <ImageView
        android:id="@+id/imagenView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg4"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/titulo_restaurant"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imagenView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_registrar"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/usuario_nombre"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@color/white"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/usuario_apellido"
        android:textColorHint="@color/white"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@color/white"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextDNI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_featured_video_24"
        android:drawablePadding="13dp"
        android:hint="@string/usuario_dni"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textColor="@color/white"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/usuario_correo"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDNI"
        app:layout_constraintWidth_percent=".8"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/usuario_contrasenia"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText3"
        app:layout_constraintWidth_percent=".8"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/boton_registrar"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText4"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.6"/>

    <TextView
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Ya esta registrado?"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"/>
    
    <TextView
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_ingresar"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editText5"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>